refactor like/dislike post
